[package]
name = "bem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
open = "3.2.0"
reqwest = "0.11.13"
select = "0.6.0"
tokio = {version = "1.23.0", features = ["macros", "rt-multi-thread"]}
